--- a/scss/block/_navbar.scss
+++ b/scss/block/_navbar.scss
@@ -6,7 +6,7 @@
     background-position: right;
     background-position-y: top;
     .navbar {
-    position: sticky;
+    position: fixed;
     left: 0;
     top: 0;background: #F6EBDA;
       width: 100%;
