--- a/scss/block/_footer.scss
+++ b/scss/block/_footer.scss
@@ -30,14 +30,20 @@
         justify-content: space-between;
         padding: 5px;
         input {
+            width: 100%;
+            border: 1px solid red;
+            outline: none;
           border: none;
+          font-size: 20px;
+          padding-left: 10px;
         }
         button {
           width: 138px;
           height: 44px;
           padding: 5px;
           background: #2f2105;
-
+color: #fff;
+font-size: 17px;
           border-radius: 42px;
           border: none;
         }
